refactor: make success, failure, technical and business stats optional
Only 'total' is now required in AuthenticationStats and FailureStats schemas.

--- a/template.yaml
+++ b/template.yaml
@@ -516,7 +516,7 @@ components:
 
     AuthenticationStats:
       type: object
-      required: [total, success, failure]
+      required: [total]
       properties:
         total:
           type: integer
@@ -531,7 +531,7 @@ components:
 
     FailureStats:
       type: object
-      required: [total, technical, business]
+      required: [total]
       properties:
         total:
           type: integer
